--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:server": "cd server && node dist/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/axios": "^0.14.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
